Updated composer.json and readmes

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "ext-sqlite": "*",
         "yiisoft/yii": "1.1.15",
         "yiiext/twig-renderer": "dev-master"
     },
