Fixed extension dependency

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "ext-sqlite": "*",
+        "ext-pdo_sqlite": "*",
         "yiisoft/yii": "1.1.15",
         "yiiext/twig-renderer": "dev-master"
     },
